--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Exports/rabbit-holed/index.html"
+export_path="../../Exports/rabbit-holed-ludum-dare/index.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -40,7 +40,7 @@ progressive_web_app/orientation=0
 progressive_web_app/icon_144x144="uid://byk6er6toscei"
 progressive_web_app/icon_180x180=""
 progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color(0, 0, 0, 1)
+progressive_web_app/background_color=Color(0, 0.0823529, 0.156863, 1)
 
 [preset.1]
 
